# waldorfbot

./: CMakeLists.txt  Dockerfile  bot.yml  conanfile.txt  event_receiver.cpp  event_receiver.h  main.cpp
